# pythonExperiments

./: .gitignore  LICENSE  README.md
cppRobot/robot/: .gitignore
cppRobot/robot/src/main/cpp/: ExpTimedRobot.cpp  ExpTimedRobot.h  Robot.cpp
expheapq/src/: expheadq.py
minTestRobot/: .gitignore  physics.py  robot.py
minTestRobotLocalTimedRobotPy/: .gitignore  pyproject.toml  requirements_dev.txt  robot.py  timedrobotpy.py
pythonRobot/: .gitignore  exptimedrobotpy.py  pyproject.toml  robot.py
timedrobotmath/: .gitignore  README.md  pyproject.toml
timedrobotmath/timedrobotmath/: __init__.py
timedrobotmath/timedrobotmath/include/: timedrobotmath.h
timedrobotmath/timedrobotmath/src/: timedrobotmath.cpp
tryRobotPyBuildEditable/: .gitignore  README.md  pyproject.toml  test100.sh  trpbeConfig.toml  trpbeConfigMikeStitt.toml  trpbeConfigMikeStittNoSpiresRobot.toml
tryRobotPyBuildEditable/src/trpbe/: body.py  singleton.py
