[project]
name = "trpbe"
version = "2025.0.1"

description = "Try robotpy build editable"

authors = [
  {name = "Mike Stitt", email = "mike@stitt.cc"},
]

dependencies = [
    "click",
    "tomli",
]

requires-python = ">=3.9"

[project.scripts]
trpbe = "trpbe.body:mainEntryPoint"

[build-system]
requires = [
  "setuptools >= 77.0.3",
]
build-backend = "setuptools.build_meta"

